# end-to-end-ml-project

./: .gitignore  Dockerfile  app.py  dockerfileprueba.txt  kaggle.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
notebooks/: 1_exploratory_data_analysis.ipynb  2_transform_data.ipynb  3_model_training.ipynb  4_probe.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: exception.py  paths.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
