[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Santiago Lopez <santiagolopez@sqdm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
requests = "^2.30.0"
kaggle = "^1.5.13"
python-dotenv = "^1.0.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
catboost = "^1.2"
xgboost = "^1.7.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
